--- a/React/package.json
+++ b/React/package.json
@@ -11,9 +11,12 @@
   "author": "Bryan Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/charts": "^2.0.3",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
