--- a/React/package.json
+++ b/React/package.json
@@ -11,12 +11,14 @@
   "author": "Bryan Rodriguez",
   "license": "ISC",
   "dependencies": {
-    "@ant-design/charts": "^2.0.3",
+    "@ant-design/charts": "^1.3.4",
+    "@ant-design/plots": "^1.2.6",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
