--- a/React/package.json
+++ b/React/package.json
@@ -16,13 +16,16 @@
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "qrcode": "^1.5.3",
+    "qrcodejs": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -31,6 +34,7 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "exports-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "style-loader": "^3.3.4",
