--- a/React/package.json
+++ b/React/package.json
@@ -15,6 +15,7 @@
     "@ant-design/plots": "^1.2.6",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.6.7",
     "qrcode": "^1.5.3",
     "qrcodejs": "^1.0.0",
@@ -24,8 +25,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
